python/testData/quickFixes/PyAddImportQuickFixTest/classesFromPythonSkeletonsNotSuggested/main.py
class MyView(<error descr="Unresolved reference 'View'">Vi<caret>ew</error>):
    pass